fix: long email address word wrap

--- a/src/components/ContactDetailsContainer/OverviewContainer/ContactInfoContainer/ContactInfoContainer.module.scss
+++ b/src/components/ContactDetailsContainer/OverviewContainer/ContactInfoContainer/ContactInfoContainer.module.scss
@@ -1,28 +1,29 @@
 .miniContainer {
-    display: flex;
-    gap: 24px;
+  display: flex;
+  gap: 24px;
 }
 
 .horizontalLayout {
-    display: flex;
-    gap: 8px;
-    align-items: center;
+  display: flex;
+  gap: 8px;
+  align-items: center;
 }
 
 .emailAddress {
-    overflow: hidden;
+  overflow: hidden;
+  word-wrap: break-word;
 }
 
 .border {
-    border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 
 .gap {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .editIcon {
-    cursor: pointer
+  cursor: pointer
 }
 
 .buttonContainer {
@@ -37,7 +38,7 @@
   border-radius: 25px !important;
   padding: 5px 12px !important;
   background-color: #4178ff !important;
- 
+
   span {
     font-size: 14px !important;
     color: #ffffff !important;
@@ -58,7 +59,7 @@
 .deleteButton {
   border-radius: 25px !important;
   padding: 5px 20px !important;
- 
+
   span {
     font-size: 14px !important;
     color: #4178ff !important;
