--- a/src/components/ContactDetailsContainer/ScopeOfAppointmentContainer/SOASignedComplete/SOASignedComplete.module.scss
+++ b/src/components/ContactDetailsContainer/ScopeOfAppointmentContainer/SOASignedComplete/SOASignedComplete.module.scss
@@ -33,6 +33,10 @@
                     display: flex;
                     justify-content: flex-start;
                     cursor: pointer;
+
+                    &:disabled {
+                        cursor: not-allowed;
+                    }
                 }
             }
 
